--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <h1>🎯 LeetCode Patterns - Week 4</h1>
             <p class="subtitle">Master 6 patterns that unlock 300+ LeetCode problems</p>
             <div class="badges">
-                <span class="badge">Week 4 - In Progress</span>
+                <span class="badge">Week 4 - Complete ✅</span>
                 <span class="badge">6 Patterns</span>
                 <span class="badge">300+ Problems</span>
                 <span class="badge">Interactive Visualizations</span>
@@ -262,8 +262,7 @@
             </div>
 
             <!-- Day 2 -->
-            <div class="project-card coming-soon">
-                <span class="coming-soon-badge">Coming Soon</span>
+            <div class="project-card">
                 <div class="project-header">
                     <span class="project-icon">📊</span>
                     <h2 class="project-title">Merge Intervals</h2>
@@ -278,11 +277,14 @@
                     <span class="stat"><strong>Problems:</strong> 40+</span>
                     <span class="stat"><strong>Time:</strong> O(n log n)</span>
                 </div>
+                <div class="project-buttons">
+                    <a href="day02-merge-intervals/index.html" class="btn btn-primary">🚀 Live Demo</a>
+                    <a href="https://github.com/Tyagirohan/LeetCode-Patterns/tree/main/day02-merge-intervals" class="btn btn-secondary">📂 Code</a>
+                </div>
             </div>
 
             <!-- Day 3 -->
-            <div class="project-card coming-soon">
-                <span class="coming-soon-badge">Coming Soon</span>
+            <div class="project-card">
                 <div class="project-header">
                     <span class="project-icon">♟️</span>
                     <h2 class="project-title">Backtracking</h2>
@@ -297,11 +299,14 @@
                     <span class="stat"><strong>Problems:</strong> 50+</span>
                     <span class="stat"><strong>Time:</strong> O(2^n)</span>
                 </div>
+                <div class="project-buttons">
+                    <a href="day03-backtracking/index.html" class="btn btn-primary">🚀 Live Demo</a>
+                    <a href="https://github.com/Tyagirohan/LeetCode-Patterns/tree/main/day03-backtracking" class="btn btn-secondary">📂 Code</a>
+                </div>
             </div>
 
             <!-- Day 4 -->
-            <div class="project-card coming-soon">
-                <span class="coming-soon-badge">Coming Soon</span>
+            <div class="project-card">
                 <div class="project-header">
                     <span class="project-icon">🏆</span>
                     <h2 class="project-title">Top K Elements</h2>
@@ -316,11 +321,14 @@
                     <span class="stat"><strong>Problems:</strong> 40+</span>
                     <span class="stat"><strong>Time:</strong> O(n log k)</span>
                 </div>
+                <div class="project-buttons">
+                    <a href="day04-top-k-elements/index.html" class="btn btn-primary">🚀 Live Demo</a>
+                    <a href="https://github.com/Tyagirohan/LeetCode-Patterns/tree/main/day04-top-k-elements" class="btn btn-secondary">📂 Code</a>
+                </div>
             </div>
 
             <!-- Day 5 -->
-            <div class="project-card coming-soon">
-                <span class="coming-soon-badge">Coming Soon</span>
+            <div class="project-card">
                 <div class="project-header">
                     <span class="project-icon">🌳</span>
                     <h2 class="project-title">Binary Tree Patterns</h2>
@@ -335,11 +343,14 @@
                     <span class="stat"><strong>Problems:</strong> 100+</span>
                     <span class="stat"><strong>Time:</strong> O(n)</span>
                 </div>
+                <div class="project-buttons">
+                    <a href="day05-binary-tree/index.html" class="btn btn-primary">🚀 Live Demo</a>
+                    <a href="https://github.com/Tyagirohan/LeetCode-Patterns/tree/main/day05-binary-tree" class="btn btn-secondary">📂 Code</a>
+                </div>
             </div>
 
             <!-- Day 6 -->
-            <div class="project-card coming-soon">
-                <span class="coming-soon-badge">Coming Soon</span>
+            <div class="project-card">
                 <div class="project-header">
                     <span class="project-icon">🔄</span>
                     <h2 class="project-title">Subsets & Permutations</h2>
@@ -353,6 +364,10 @@
                     <span class="stat"><strong>Day:</strong> 6/6</span>
                     <span class="stat"><strong>Problems:</strong> 50+</span>
                     <span class="stat"><strong>Time:</strong> O(2^n)</span>
+                </div>
+                <div class="project-buttons">
+                    <a href="day06-subsets-permutations/index.html" class="btn btn-primary">🚀 Live Demo</a>
+                    <a href="https://github.com/Tyagirohan/LeetCode-Patterns/tree/main/day06-subsets-permutations" class="btn btn-secondary">📂 Code</a>
                 </div>
             </div>
         </div>
